[package]
name = "elastio-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.10"
reqwest = { version = "0.11.10", features = ["json"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
wiremock = "0.5"
serde_json = "1.0"
